--- a/assets/blog.less
+++ b/assets/blog.less
@@ -1,9 +1,17 @@
 
-@mainColor:#51A8DD;
+@mainColor:#005CAF;
 @deepColor:#0C0C0C;
 @lightColor:#AAA;
 @wordColor:#fff;
 @buttonColor:#333;
+
+#content-wrap{
+  opacity: 0;
+}
+#load-wrap{
+  text-align: center;
+  margin-top: 100px;
+}
 
 @keyframes spin {
   0%{
