--- a/assets/blog.less
+++ b/assets/blog.less
@@ -40,15 +40,15 @@
 }
 
 @font-face {
-  font-family: Futura;
-  src: url('../fonts/Futura.otf');
+  font-family: Lyon;
+  src: url('../fonts/lyon.ttf');
 }
 
 body,html{
   min-width: 800px;
   min-height: 400px;
   position: relative;
-  font-family: "Futura","Helvetica35", "HelveticaNeue", "Helvetica-Neue", Helvetica, Arial, sans-serif;
+  font-family: "Lyon","Helvetica35", "HelveticaNeue", "Helvetica-Neue", Helvetica, Arial, sans-serif;
 }
 
 a{
@@ -317,7 +317,7 @@ header {
       margin: 125px auto;
       border:none;
       background: @mainColor;
-      font-family: Futura;
+      font-family: Lyon;
       font-size: 23px;
       letter-spacing: 1px;
       color: #ffffff;
@@ -667,7 +667,7 @@ header {
     display: block;
     border:none;
     background: @mainColor;
-    font-family: Futura;
+    font-family: Lyon;
     font-size: 20px;
     color: #ffffff;
     height: 50px;
