--- a/assets/index.css
+++ b/assets/index.css
@@ -6,7 +6,7 @@ body {
   min-height: 700px;
   margin: 0 auto;
   -webkit-font-smoothing: antialiased;
-  font-family: "Helvetica35", "HelveticaNeue", "Helvetica-Neue", Helvetica, Arial, sans-serif;
+  font-family: "Lyon", "Helvetica35", "HelveticaNeue", "Helvetica-Neue", Helvetica, Arial, sans-serif;
 }
 body {
   position: relative;
@@ -41,7 +41,7 @@ a {
 }
 @font-face {
   font-family: futura;
-  src: url('../fonts/Futura.otf');
+  src: url('../fonts/lyon.ttf');
 }
 .cf:before,
 .cf:after {
@@ -147,7 +147,7 @@ nav ul li:hover {
   color: #AAAAAA;
   width: 100%;
   bottom: -40px;
-  font-family: Futura;
+  font-family: Lyon;
   min-width: 490px;
 }
 @media (max-width: 800px) {
@@ -169,7 +169,7 @@ nav ul li:hover {
     width: 1280px;
   }
   .home-lantau a {
-    font-family: Futura;
+    font-family: Lyon;
   }
   .place-holder {
     display: none;
