--- a/assets/index.less
+++ b/assets/index.less
@@ -7,7 +7,7 @@ html, body {
   min-height: 700px;
   margin: 0 auto;
   -webkit-font-smoothing: antialiased;
-  font-family: "Helvetica35", "HelveticaNeue", "Helvetica-Neue", Helvetica, Arial, sans-serif;
+  font-family: "Lyon","Helvetica35", "HelveticaNeue", "Helvetica-Neue", Helvetica, Arial, sans-serif;
 }
 
 body{
@@ -52,7 +52,7 @@ a{
 }
 @font-face {
   font-family: futura;
-  src: url('../fonts/Futura.otf');
+  src: url('../fonts/lyon.ttf');
 }
 
 //clearfix begin
@@ -171,7 +171,7 @@ nav{
   color: #AAAAAA;
   width: 100%;
   bottom: -40px;
-  font-family: Futura;
+  font-family: Lyon;
   min-width: 490px;
 }
 @media (max-width: 800px){
@@ -195,7 +195,7 @@ nav{
     width: 1280px;
   }
   .home-lantau a{
-    font-family: Futura;
+    font-family: Lyon;
   }
   .place-holder{
     display: none;
