--- a/assets/index.css
+++ b/assets/index.css
@@ -96,7 +96,7 @@ nav ul li:hover {
   margin-top: 30px;
 }
 #logo .img {
-  margin: 0px auto;
+  margin: 50px auto 0 auto;
   height: 490px;
   width: 490px;
   background: url("../img/lumpy-bw.png");
