--- a/assets/index.less
+++ b/assets/index.less
@@ -112,7 +112,7 @@ nav{
     margin-top: 30px;
   }
   .img{
-    margin: 0px auto;
+    margin: 50px auto 0 auto;
     height: 490px;
     width: 490px;
     background: url("../img/lumpy-bw.png");
